# oz_django_7

./: .gitignore  manage.py  pyproject.toml  temp.py  test.sh
.github/workflows/: ci.yml
oz_django_7/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py
tabom/migrations/: 0001_initial.py
tabom/services/: like_services.py
tabom/tests/: test_like_services.py
