[tool.poetry]
name = "oz-django-7"
version = "0.1.0"
description = ""
authors = ["yerin1562 <yerin1562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"
django-stubs = "^5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "manage"
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "oz_django_7.settings"